--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue": "^2.7.16",
+    "vue-router": "^3.5.1",
+    "vuetify": "^3.5.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
